src/test/ui/suggestions/missing-debug-implementations.rs
#![allow(unused)]
#![deny(missing_debug_implementations)]

struct Pod;

pub struct Discovery {}

pub struct Shenzhou {
    escape_pods: [Pod]
}

fn main() {}
